css/style.css
/* general styling stuff */
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap');

* {
    margin: 0;
    padding: 0;
}

body {
    font-family: 'Poppins', 'sans-serif';
}

html {
    scroll-behavior: smooth;
}

p {
    color: rgb(85, 85, 85);
}

/* transition */
a, .btn {
    transition: all 300ms ease;
    font-family: 'Poppins', 'sans-serif';
}

/* desktop nav */
nav, .nav-links {
    display: flex;
}

nav {
    justify-content: space-around;
    align-items: center;
    height: 17vh;
}

.nav-links {
    gap: 2rem;
    list-style: none;
    font-size: 1.5rem;
}

a {
    color: black;
    text-decoration: none;
    text-decoration-color: white;
}

a:hover {
    color: grey;
    text-decoration: underline;
    text-underline-offset: 1rem;
    text-decoration-color: rgb(181, 181, 181);
}

.logo {
    font-size: 2rem;
}

.logo:hover {
    cursor: default;
}

/* hamburger menu */
#hamburger-nav {
  display: none;
}

.hamburger-menu {
  position: relative;
  display: inline-block;
}

.hamburger-icon {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 24px;
  width: 30px;
  cursor: pointer;
}

.hamburger-icon span {
  width: 100%;
  height: 2px;
  background-color: black;
  transition: all 300ms ease-in-out;
}

.menu-links {
  position: absolute;
  top: 100%;
  right: 0;
  background-color: white;
  width: fit-content;
  max-height: 0;
  overflow: hidden;
  transition: all 300ms ease-in-out;
}

.menu-links a {
  display: block;
  padding: 10px;
  text-align: center;
  font-size: 1.5rem;
  color: black;
  text-decoration: none;
  transition: all 300ms ease-in-out;
}

.menu-links li {
  list-style: none;
}

.menu-links.open {
  max-height: 300px;
}

.hamburger-icon.open span:first-child {
  transform: rotate(45deg) translate(10px, 5px);
}

.hamburger-icon.open span:nth-child(2) {
  opacity: 0;
}

.hamburger-icon.open span:last-child {
  transform: rotate(-45deg) translate(10px, -5px);
}

.hamburger-icon span:first-child {
  transform: none;
}

.hamburger-icon span:first-child {
  opacity: 1;
}

.hamburger-icon span:first-child {
  transform: none;
}

/* sections */
section {
    padding-top: 4vh;
    height: auto;;
    margin: 0 10rem;
    box-sizing: border-box;
    min-height: fit-content;
}

.section-container {
    display: flex;
}

/* profile section */
#profile {
    display: flex;
    justify-content: center;
    gap: 5rem;
    height: 80vh;
}

.section__pic-container {
    display: flex;
    height: 400px; /*switch to vh?*/
    width: 400px;
    margin: auto 0;
}

.section__text {
    align-self: center;
    text-align: center;
}

.section__text p {
    font-weight: 600;
}

.section__text__p1 {
    text-align: center;
}

.section__text__p2 {
    font-size: 1.75rem;
    margin-bottom: 1rem;
}

.title {
    font-size: 3rem;
    text-align: center;
}

#socials-container {
    display: flex;
    justify-content: center;
    margin-top: 1rem;
    gap: 1rem;
}

/* icons */
.icon {
    cursor: pointer;
    height: 2rem;
}

/* buttons */
.btn-container {
    display: flex;
    justify-content: center;
    gap: 1rem;
    margin-bottom: 1rem;
}

.btn {
    font-weight: 600;
    transition: all 300ms ease;
    padding: 1rem;
    width: 8rem;
    border-radius: 2rem;

}

.btn-color-1,
.btn-color-2 {
    border: rgb(53, 53, 53) 0.1rem solid;
}

.btn-color-1:hover,
.btn-color-2:hover {
    cursor: pointer;
}

.btn-color-1,
.btn-color-2:hover {
    background: rgb(53, 53, 53);
    color: white;
}

.btn-color-1:hover {
    background: rgb(0, 0, 0);
}

.btn-color-2 {
    background: none;
}

.btn-color-2:hover {
    border: rgb(255, 255, 255) 0.1rem solid;
}

.btn-color-3 {
    appearance: none;
    -webkit-appearance: none;
    pointer-events: none;
    user-select: none;
    cursor: default;
}

/* about section */
#about {
    position: relative;
}

.about-containers {
    display: flex;
    flex-wrap: wrap;
    gap: 2rem;
    margin-bottom: 2rem;
    margin-top: 2rem;
}

.about-details-container {
    justify-content: center;
    flex-direction: column;
}

.about-containers, .about-details-container {
    display: flex;
}

.about-pic {
    border-radius: 2rem;
}

.arrow {
    position: absolute;
    bottom: 2.5rem;
    right: -5rem;
}

.details-container {
    padding: 1.5rem;
    flex: 1;
    background: white;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

.details-container .degree {
    padding-bottom: 1rem;
}
.section-container {
    gap: 4rem;
    height: 80%
}

.section__pic-container {
    height: 400px;
    width: 400px;
    margin: auto 0;
}

.degree {
    font-weight: bold;
}

/* skills section */
#skills {
    position: relative;
}

.skills-subtitle {
    color: rgb(85, 85, 85);
    font-weight: 600;
    font-size: 1.75rem;
    margin-bottom: 2rem;
}

.skills-details-container {
    display: flex;
    justify-content: center;
    flex-direction: column;
}

#skills .article-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: flex-start;
    gap: 0;
}

#skills article {
    display: flex;
    flex-direction: row;
    width: 50%;
    justify-content: flex-start;
    align-items: flex-start;
    gap: 1rem;
    margin-bottom: 1.5rem;
}

.article-container {
    display: flex;
    text-align: initial;
    flex-wrap: wrap;
    flex-direction: column;
    gap: 2.5rem;
    justify-content: space-around;
}

article {
    display: flex;
    width: 10rem;
    justify-content: space-around;
    gap: 0.5rem;
}

article .icon {
    cursor: default;
}

/* projects */
#projects {
    position: relative;
}

#projects .about-containers {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 2rem;
}

#projects .details-container {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    flex: 1 1 350px;
    max-width: 450px;
    padding: 2rem;
}

#projects .article-container {
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 250px;
    margin-bottom: 1rem;
    border-radius: 2rem;
    overflow: hidden;
}

.color-container {
    border-color: rgb(163, 163, 163);
    background: rgb(250, 250, 250);
}

.project-img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    display: block;
}

.project-title {
    margin: 1rem;
    color: black;
}

.project-description {
    max-height: 0;
    opacity: 0;
    overflow: hidden;
    margin: 0;
    text-align: center;
    transition: all 300ms ease;
}

.project-description.show {
    max-height: 100vh;
    opacity: 1;
    margin: 1rem 0;
}

#projects .about-containers {
    align-items: flex-start;
}

.project-btn {
    color: black;
    background-color: white;
    border-color: rgb(163, 163, 163);
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
}

.project-btn:hover {
    background-color: rgb(245, 245, 245);
    border-color: rgb(163, 163, 163);
    color: black;
    cursor: pointer;
}

.project-skills {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 0.5rem;
    margin-top: auto;
}

.project-skills-btn {
    width: auto;
    padding: 0.5rem 1rem;
    font-size: 0.8rem;
    cursor: default;
    
}

.btn-icon {
    width: 1rem;
    height: auto;
    transition: transform 300ms ease;
}

/* contact */
#contact {
    display: flex;
    justify-content: center;
    flex-direction: column;
    height: 70vh;
}

.contact-info-upper-container {
    display: flex;
    justify-content: center;
    border-radius: 2rem;
    border: rgb(53, 53, 53) 0.1rem solid;
    border-color: rgb(163, 163, 163);
    background: rgb(250, 250, 250);
    margin: 2rem auto;
    padding: 0.5rem;
}

.contact-info-container {
    display: flex;
    align-items: center;
    justify-content: center;
    gap: 0.5rem;
    margin: 1rem;
}

.contact-info-container p {
    font-size: larger;
}

.contact-icon {
    cursor: default;
}

/* footer */
footer {
    height: 26vh;
    margin: 0 1rem;
}

footer p {
    text-align: center;
}

